Front end + likes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.datasource.url=jdbc:postgresql://localhost/sweater
 spring.datasource.username=acaryn
 spring.datasource.password=""
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
+#spring.flyway.enabled=false
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
 upload.path=/Users/acaryn
 my.url=http://localhost:8080
+application.package=ru.sweater
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
@@ -18,3 +20,8 @@ spring.mail.password=aoqvgrjkiozqsafa
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+recaptcha.secret=6Ld3Nw0bAAAAAGsIkotQiwQ5pqyYw7NuUTyqLySR
+
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
