--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/sweater
+spring.datasource.url=jdbc:postgresql://db:5432/sweater
 spring.datasource.username=acaryn
-spring.datasource.password=""
+spring.datasource.password=
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
-upload.path=/Users/acaryn
-my.url=http://localhost:8080
+upload.path=/uploads
+hostname=app:8080
 application.package=ru.sweater
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
@@ -19,7 +19,7 @@ spring.mail.username=moranton110194@yandex.ru
 spring.mail.password=aoqvgrjkiozqsafa
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=true
+mail.debug=false
 
 recaptcha.secret=6Ld3Nw0bAAAAAGsIkotQiwQ5pqyYw7NuUTyqLySR
 
