--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.suffix=.ftl
 upload.path=/Users/acaryn
-my.url=http://localhost:8080
+hostname=http://localhost:8080
 application.package=ru.sweater
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
